k8s/base/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: ticketly
  labels:
    app: order-service
spec:
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - image: ticketly/order-service:latest
        name: order-service
        ports:
        - containerPort: 8084
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8084
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 15
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8084
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 30
          failureThreshold: 3
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ticketly
  labels:
    app: order-service
spec:
  ports:
  - port: 8084
    targetPort: 8084
  selector:
    app: order-service
