k8s/base/scheduler-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-service
  namespace: ticketly
  labels:
    app: scheduler-service
spec:
  selector:
    matchLabels:
      app: scheduler-service
  template:
    metadata:
      labels:
        app: scheduler-service
    spec:
      containers:
      - image: ticketly/scheduler-service:latest
        name: scheduler-service
        ports:
        - containerPort: 8085
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8085
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 15
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8085
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 30
          failureThreshold: 3
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler-service
  namespace: ticketly
  labels:
    app: scheduler-service
spec:
  ports:
  - port: 8085
    targetPort: 8085
  selector:
    app: scheduler-service
