k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketly-ingress
  namespace: ticketly
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # CORS Configuration to replace the API Gateway CORS filter
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:8090, http://ticketly.test:8090, http://www.localhost:8090, https://ticketly.dpiyumal.me"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-max-age: "3600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
spec:
  rules:
  - host: api.dpiyumal.me
    http:
      paths:
      - path: /api/event-seating
        pathType: Prefix
        backend:
          service:
            name: event-command-service
            port:
              number: 8081
      - path: /api/event-query
        pathType: Prefix
        backend:
          service:
            name: event-query-service
            port:
              number: 8082
      - path: /api/order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8084
      - path: /api/scheduler
        pathType: Prefix
        backend:
          service:
            name: scheduler-service
            port:
              number: 8085
  - host: kafka.dpiyumal.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 8080
  - host: logs.dpiyumal.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
  tls:
  - hosts:
    - api.dpiyumal.me
    secretName: api-tls
  - hosts:
    - kafka.dpiyumal.me
    secretName: kafka-tls
  - hosts:
    - logs.dpiyumal.me
    secretName: logs-tls
